# Agentic-ESG

./: .env.example  .gitignore  CONTRIBUTORS.md  Dockerfile  IMPROVEMENTS.md  Procfile  RAILWAY_DEPLOYMENT.md  README.md  SECTOR_PROFILES_IMPLEMENTATION.md  SECURITY.md  index.html  main.py  memory.json  migrate_json_to_sqlite.py  prepare_demo.sh  pyproject.toml  pytest.ini  railway.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh  start_demo.sh  test_backend.py
.github/workflows/: ci.yml  tests.yml
config/: agents.yaml  knowledge_base.yaml  tasks.yaml
knowledge/: account_access.md  billing.md  delivery_policy.md  escalation_policy.json  escalation_policy.md  general_support.md  order_issues.md  refund_policy.md  support_faq.md  technical_issues.md
project-context/1.define/: prd.md
project-context/2.build/: frontend-user-journey.md  sad.md
prompts/: classification_prompt.md  climate_analyst.md  escalation_prompt.md  esg_strategist.md  report_writer.md  response_generation_prompt.md
scripts/: test_nasa_adapter.py  test_pipeline.py
skills/: customer_support_analysis.md  empathetic_response.md  escalation_decision.md  multilingual_support.md  safety_validation.md
src/aamad/: auth.py  backend.py  config.py  data_store.py  frontend.py  observability.py  routing_engine.py  services.py  streamlit_app.py  tool_registry.py
src/aamad/agents/: __init__.py  crews.py  definitions.py  tasks.py
src/aamad/api/: models.py  routes.py
src/aamad/core/: config.py  services.py
src/aamad/data/: historical_seed.json  observability_events.json.bak  tickets.json
src/aamad/exports/: excel_export.py  pdf_export.py
src/aamad/flow/: state.py  steps.py  support_flow.py
src/aamad/integrations/: crm_client.py  notification_client.py  ticketing_client.py
src/aesg/: backend.py
src/aesg/agents/: crews.py  tasks.py
src/aesg/api/: models.py  routes.py
src/aesg/data/: nasa_adapter.py  openmeteo_adapter.py
src/aesg/db/: mongo.py
src/aesg/exports/: excel_report.py  pdf_report.py
src/aesg/pipeline/: climate_engine.py  orchestrator.py
src/aesg/sectors/: README.md  __init__.py  agriculture_food.yaml  energy_utilities.yaml  finance_banking.yaml  general.yaml  infrastructure.yaml  manufacturing.yaml  real_estate.yaml  retail_logistics.yaml
src/cs/: backend.py
src/cs/agents/: crews.py  definitions.py  tasks.py
src/cs/api/: models.py  routes.py
src/cs/core/: config.py
src/cs/data/: nasa_adapter.py  openmeteo_adapter.py
src/cs/db/: mongo.py
src/cs/exports/: excel_report.py  pdf_report.py
src/cs/pipeline/: orchestrator.py
tests/: __init__.py  conftest.py  test_api_routes.py  test_backend.py  test_external_tools.py  test_frontend.py  test_known_locations.py  test_nasa_adapter.py  test_report_exports.py  test_streamlit_app.py  test_tools.py
tools/: __init__.py  address_validation_tool.py  classification_tool.py  escalation_tool.py  github_tool.py  graphql_api_tool.py  knowledge_tool.py  memory_tool.py  pending_action_tool.py  prompt_tool.py  quality_evaluator.py  refund_lookup_tool.py  refund_status_tool.py  response_tool.py  rest_api_tool.py  sentiment_tool.py  utils.py  weather_check_tool.py  weather_tool.py
