[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate-sentinel"
version = "1.0.0"
description = "ESG climate risk analysis powered by NASA POWER + Claude AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "BeatrizCoder" }]
dependencies = []
keywords = ["climate", "esg", "risk", "crewai", "anthropic"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/BeatrizCoder/climate-sentinel"
Repository = "https://github.com/BeatrizCoder/climate-sentinel.git"

[project.scripts]
cs-backend = "cs.backend:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
